--- a/CSS/hojaEstilos.css
+++ b/CSS/hojaEstilos.css
@@ -80,3 +80,12 @@ a:hover{
    border-spacing: 5px;
    border-style: double;
 }
+.Imgcandidatos{
+    object-fit: cover;
+    height: 250px;
+    width: 250px;    
+}
+.card{
+    margin: auto;
+    background:rgba(77, 76, 76, 60%) ;
+}
