--- a/CSS/hojaEstilos.css
+++ b/CSS/hojaEstilos.css
@@ -89,3 +89,8 @@ a:hover{
     margin: auto;
     background:rgba(77, 76, 76, 60%) ;
 }
+header h1{
+    font-size: 30px;
+    text-align: center;
+    line-height: 60px;
+}
